# apt

./: .gitignore  README.md  pyproject.toml
apt/: config.py
apt/ingest/: __init__.py  chunker.py  loader.py  metadata.py
apt/retrieval/: __init__.py  chain.py
apt/store/: __init__.py  chroma.py
deploy/: .env.template  download_results.sh  run_pipeline.sh  startup.sh
scripts/: compare_extractors.py
scripts/archive/: test_pymupdf4llm.py  test_pymupdf4llm_rag.py  test_pymupdf4llm_vectordb.py
scripts/fetch/: download_aptnotes_reports.py
tests/: conftest.py
tests/ingest/: test_chunker.py  test_loader.py  test_metadata.py
tests/integration/: test_pymupdf4llm_pipeline.py
tests/retrieval/: test_chain.py
tests/store/: test_chroma.py
tests/tools/: test_cli.py
tools/: attribute  embed  extract  fetch  query
