[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apt"
version = "0.1.0"
description = "APT Threat Intelligence RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain>=1.0.2",
    "langsmith>=0.4.38",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.0.0",
    "typer>=0.12.0",
    "unstructured[pdf]>=0.18.15",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_ollama: marks tests that require Ollama to be running",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=apt",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
